--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,7 @@ jobs:
           cache: 'npm'
 
       - name: Install Dependencies
-        run: npm install
+        run: npm install && npm install @tailwindcss/oxide-linux-x64-gnu
 
       - name: Build Project
         env:
