--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     environment:
       - PUID=0
       - PGID=0
+      - UMASK_SET=002
       - TZ=Asia/Shanghai
       - TRANSMISSION_WEB_HOME=/src
       - USER=transmission
